assets/css/main.less
// out: main.css, sourcemap: false, compress: true

:root {
	/*
	Set global CSS custom properties
	*/

	/* Spacing, base unit, t-shirt sizing (s,m,l,xl) */
	--spacing-unit: 8px;
	--xs: 4px;
	--s: 8px;
	--m: 16px;
	--l: 32px;
	--xl: 80px;

	/* Colors */
	--brand-color: hsla(44, 100%, 54%, 1);
	--brand-color--l: hsla(44, 100%, 54%, 0.24);
	--heading-color: hsla(44, 20%, 10%, 1.0);
	--text-color: hsla(44, 0%, 10%, 0.82);
	--meta-color: hsla(44, 0%, 26%, 0.66);
	--red-color: hsla(359, 84%, 44%, 1.0);
	--light-gray-color: hsla(44, 0%, 26%, 0.08);

	/* font sizes */
	--text: 1rem;
	--text-s: 0.88rem;
	--text-l: 1.1rem;

	/* animation */
	--fast: 0.2s;
	--slow: 0.8s;
}

/*----------------------------
	# Defaults and resets
----------------------------*/

body {
	font-family: 'libre_franklin';
	font-size: 16px;
	-ms-text-size-adjust:100%;
	-webkit-text-size-adjust:100%;
	-moz-osx-font-smoothing:grayscale;
	-webkit-font-smoothing:antialiased;
	font-feature-settings: "kern" 1;
	font-kerning: normal;
	font-feature-settings: "onum" 1, "pnum" 1, "kern" 1, "ss01" 1;
	line-height: 1.5;
	background-color: #f9f8f3;
	padding: 0;
	margin: auto;
	display: flex;
	flex-direction: column;
	align-items: stretch;
	justify-content: space-between;
	height: 100vh;
	& main {
		flex: 2 0 auto;
	}
	@media(max-width: 420px) {
		font-size: 15px;
	}
	& > * {
		box-sizing: border-box;
	}
}

figure, blockquote {
	margin: 0;
	padding: 0;
}

/*----------------------------
	# Typography
----------------------------*/

@font-face {
    font-family: 'prospectus';
    src: url('../fonts/prospectus-black.woff2') format('woff2'),
         url('../fonts/prospectus-black.woff') format('woff');
    font-weight: bold;
    font-style: normal;
}
@font-face {
    font-family: 'prospectus';
    src: url('../fonts/prospectus-black-italic.woff2') format('woff2'),
         url('../fonts/prospectus-black-italic.woff') format('woff');
    font-weight: bold;
    font-style: italic;
}

@font-face {
    font-family: 'libre_franklin';
    src: url('../fonts/librefranklin-regular.woff2') format('woff2'),
         url('../fonts/librefranklin-regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'libre_franklin';
    src: url('../fonts/librefranklin-italic.woff2') format('woff2'),
         url('../fonts/librefranklin-italic.woff') format('woff');
    font-weight: normal;
    font-style: italic;
}
@font-face {
    font-family: 'libre_franklin';
    src: url('../fonts/librefranklin-semibold.woff2') format('woff2'),
         url('../fonts/librefranklin-semibold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
}
@font-face {
    font-family: 'libre_franklin';
    src: url('../fonts/librefranklin-semibold-italic.woff2') format('woff2'),
         url('../fonts/librefranklin-semibold-italic.woff') format('woff');
    font-weight: bold;
    font-style: italic;
}

h1, h2, h3, h4, h5 {
	font-family: 'prospectus';
	line-height: 1.1;
	max-width: 64ch;
	margin-bottom: 0.6rem;
	color: var(--heading-color);
	& a {
		text-decoration-thickness: 0px;
		text-decoration-color: #f9f8f3;
		&:hover {
			color: var(--text-color);
			text-decoration: underline;
			text-decoration-thickness: 2px;
			text-decoration-color: var(--brand-color);
		}
	}
}
h1, .h1 {
	font-size: 3rem;
	margin-top: 4rem;
	line-height: 0.9;
}
h2, .h2 {
	font-size: 2.2rem;
	margin-top: 3rem;
}
h3, .h3 {
	font-family: 'libre_franklin';
	font-size: 1.5rem;
	margin-top: 2rem;
}
h4, .h4 {
	font-family: 'libre_franklin';
	font-size: 1.2rem;
	margin-top: 2rem;
}
p, figcaption {
	font-size: 1rem;
	line-height: 1.8;
	color: var(--text-color);
	max-width: 64ch;
	&.lede {
		font-size: var(--text-l);
		color: var(--heading-color);
		margin-top: var(--m);
		margin-bottom: var(--l);
		@media(max-width: 840px) {
			margin-top: var(--l);
		}
	}
}
.lede {
	& p {
		font-size: var(--text-l);
	}
}
em, figcaption {
	font-style: italic;
}
strong {
	font-weight: bold;
}
cite {
	font-style: italic;
}
::selection {
	background-color: var(--brand-color--l);
}

a {
	text-decoration: underline;
	text-decoration-color: var(--brand-color);
	text-decoration-skip: ink;
	text-decoration-thickness: 2px;
	color: var(--heading-color);
	transition: var(--fast);
	&:hover {
		text-decoration-thickness: 3px;
		transition: var(--fast);
		&::after {
			/* colors the arrow on .link-arrow::after type of links on hover */
			color: #ffbe12;
			transition: var(--fast);
			transform: translateX(1px);
		}
		&::before {
			/* colors the arrow on .link-arrow::after type of links on hover */
			color: #ffbe12;
			transition: var(--fast);
			transform: translateX(-1px);
		}
	}
}
a.cover:hover,
a .cover:hover,
.work a:hover figure img {
		box-shadow: 0px 4px 0px var(--brand-color);
		transition: all var(--slow);
}
figure video {
	width: 100%;
}

blockquote {
	padding: var(--m) var(--l);
	margin-top: var(--l);
	margin-bottom: var(--l);
	border-left: 3px solid var(--brand-color);
	transform: translateX(-16px);
	& p {
		margin-bottom: var(--s);
		font-size: var(--text-l);
	}
	& p > a {
		font-size: var(--text-s);
		color: var(--text-color);
	}
}

ul, ol {
	padding-left: 32px;
	color: var(--text-color);
	& ul,
	& ol { /* Nested lists */
		margin-top: 0.4rem;
		margin-bottom: 1rem;
	}
	& li {
		margin-bottom: 0.8rem;
	}
}

/*----------------------------
	# Grids & blocks
----------------------------*/
nav, main {
	width: 100%;
	max-width: 1280px;
	margin: auto;
	padding-left: 32px;
	padding-right: 32px;
	margin-bottom: var(--l);
}
nav, main, footer {
	@media(max-width: 840px) {
		padding-left: 24px;
		padding-right: 24px;
	}
}
/* ... */

